# k38-monitor

./: .gitignore  K38_DLT_暴力测试标准流程_v0.1.md  K38_DLT_暴力测试标准流程_v0.2.md  K38_DLT_暴力测试标准流程_v0.3.md  LICENSE  NODE_CONFIG.md  README.md  UPGRADE_REPORT.md  __init__.py  __main__.py  dlt_node_server.js  dlt_panel.html  dlt_v03_test_report.json  dltrace.py  dltrace.py.v0.2.0.bak  dltrace.py.v2bak  dltrace_v2_template.py  k38_chat_server.js  pyproject.toml  v0.4.0-PLAN.md
api/: __init__.py  server.py
collector/: __init__.py  __main__.py  base.py  docker.py  files.py  jobs.py  network.py  remote.py  system.py  types.py
scripts/: k38_remote_collect.py
web/: __init__.py  app.html  server.py
