[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dltrace"
version = "0.1.0"
description = "File-level download progress tracker -- pure Python, zero dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["download", "tracker", "monitor", "progress", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/kk38/dltrace"
Repository = "https://github.com/kk38/dltrace"
Issues = "https://github.com/kk38/dltrace/issues"

[project.scripts]
dltrace = "dltrace:main"

[tool.setuptools]
py_modules = ["dltrace"]
